VZDEV/src/objects/CCPM_promoMessage__mdt.object
<CustomObject>
    <fields>
        <fullName>CCPM_MessageContentForLeads__c</fullName>
        <label>Message Content For Leads</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CCPM_dispalyOrignialMessage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dispaly Orginal Message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_finalPreDefinedResponse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final Pre Defined Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_firstPreDefinedResponse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Pre Defined Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_messageContentForProspects__c</fullName>
        <label>Message Content For Prospects</label>
        <type>TextArea</type>
    </fields>
    <label>Send  Pre Defined SMS</label>
    <pluralLabel>Send Pre Defined SMS</pluralLabel>
</CustomObject>